--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "predis/predis": "^2.3"
+        "predis/predis": "^2.3",
+        "spatie/laravel-data": "^4.13"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
